[project]
name = "edudobay_dotfiles"
version = "0.dev20250210"
authors = [
    { name = "Eduardo Dobay", email = "edudobay@gmail.com" },
]
requires-python = ">=3.10"
dependencies = [
    "argcomplete",
    "click>=8.1.8",
    "tabulate",
    "xdg-base-dirs>=6.0.2",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
"Source code" = "https://github.com/edudobay/dotfiles"

[project.scripts]
git-allrepos = "dotfiles.scripts.git_allrepos:main"
git-modified = "dotfiles.scripts.git_modified:main"
gitlab = "dotfiles.scripts.repoweb:main"
repoweb = "dotfiles.scripts.repoweb:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
dev-mode-dirs = ["."]
