[metadata]
name = edudobay_dotfiles
url = https://github.com/edudobay/dotfiles
author = Eduardo Dobay
author_email = edudobay@gmail.com

[options]
packages = find:
python_requires = >=3.7
install_requires =
    argcomplete
    pipx
    tabulate

[options.entry_points]
console_scripts =
    git-allrepos = dotfiles.scripts.git_allrepos:main
    git-modified = dotfiles.scripts.git_modified:main
    gitlab = dotfiles.scripts.repoweb:main
    repoweb = dotfiles.scripts.repoweb:main
